--- a/css/site.css
+++ b/css/site.css
@@ -4,7 +4,7 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: salmon;
+	background-color: rgb(7, 99, 135);
 }
 
 canvas {
